2001-09-07  Michael Ernst  <mernst@lcs.mit.edu>

	* src/unparse.cpp (Unparse AstBlock): Labels need to be within,
	not outside, added braces - patch 134, from bug 638.

2001-09-06  Takashi Okamoto  <tora@debian.org>

	* configure.in: check for needed headers.
	* configure:
	* src/config.h.in: Regenerate.
	* src/jikesapp.cpp:
	* src/jikes.cpp:
	* src/platform.h: set character encoding based on the one for the
	default locale - patch 168.

2001-09-06  Eric Blake  <ebb9@email.byu.edu>

	* src/Makefile.am: Added src/gencode.java to the .tar
	ball, along with hardcoded maintainer target gencode.
	Also, install jikesapi.h in the include directory.
	* src/.cvsignore:
	* Makefile.in:
	* doc/Makefile.in:
	* src/Makefile.in: Regenerate with automake dependency tracking.
	* src/gencode.java: Improved the code with more comments,
	notification in the generated files, and a 4x reduction
	to the size of src/code.cpp with no runtime cost (by
	sharing more common array entries) - patch 140, from bug 640.
	* src/code.h:
	* src/code.cpp: Regenerate from new gencode.java.
	* src/scanner.cpp (Scanner): Add a sanity check.

2001-09-06  Eric Blake  <ebb9@email.byu.edu>

	Patch 85:
	* src/java.g: Fixed some copyright and namespace
	code transferred to generated files.
	Fixed up some comments (in particular, where JLS2
	clarifies questions posed by JLS1), typos, and
	whitespace consistency problems.
	(ExplicitConstructorInvocation): Removed this
	illegal production - from bug 420.
	(Primary, ArrayCreationExpression, ArrayAccess)
	(ArrayCreationInitialized, ArrayCreationUninitialized):
	Split ArrayCreationExpression into two parts, to
	allow legal array access of initialized array,
	added in JLS2 - from bug 123.
	* src/javaact.cpp: 
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h: Regenerate with CVS version of jikespg - from bug
	516.
	* src/bytecode.cpp (EmitThisInvocation): 
	* src/body.cpp (ProcessThisCall):